# mediaify

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  docs.sh  pyproject.toml
docs/: conf.py  documentation.rst  guide.rst  index.rst
examples/: customisable.py  multimedia.py  simple.py  summary.py  video_encoding.py
examples/demo/: video_encoding-144p.webm  video_encoding-360p.webm  video_encoding-720p.webm
mediaify/: __init__.py  configs.py  file.py  files.py  media.py  presets.py  resize.py  types.py  utils.py
mediaify/animation/: __init__.py  encode.py  exports.py  formats.py  gif.py  utils.py  webp.py
mediaify/audio/: __init__.py  encode.py  exports.py  formats.py
mediaify/configs/: __init__.py  animation.py  audio.py  base.py  codecs.py  image.py  resize.py  shared.py  video.py
mediaify/encoders/: __init__.py  _dimensions.py  animation.py  configs.py  image.py  probe.py  utils.py  video.py
mediaify/image/: __init__.py  encode.py  exports.py  formats.py  jpeg.py  png.py  webp.py
mediaify/video/: __init__.py  codecs.py  encode.py  exports.py  ffmpeg.py  formats.py  info.py  process.py  summary.py  thumbnail.py
test/: data.py  test_animation.py  test_guess_type.py  test_image.py
test/animation/: test_animation.py  test_gif.py  utils.py
test/image/: __init__.py  _test_image.py  test_jpeg.py  test_png.py  test_webp.py  utils.py
test/video/: _test_video.py
tests/: data.py  test_file.py  test_guess_type.py
tests/animation/: __init__.py  test_animation.py  test_formats.py  test_webp.py
tests/audio/: test_fomats.py
tests/image/: test_formats.py
tests/video/: __init__.py  test.webm  test_codecs.py  test_formats.py  test_summary.py  test_thumbnail.py
