[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "mediaify"
version = "0.0.3"
authors = [
    {name = "Ben Brady", email = "benbradybusiness@gmail.com"},
]
description = "Encoding media into multiple qualities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "ffmpeg-python~=0.2.0",
    "pillow~=9.5.0",
    "python_magic~=0.4.27",
    "python-magic-bin; sys_platform == 'win32'",
]
