[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "mediaify"
version = "1.1.1"
description = "Encoding media into multiple qualities"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "Ben Brady", email = "benbradybusiness@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Typing :: Typed",
]
requires-python = ">=3.7"
dependencies = [
    "ffmpeg-python~=0.2.0",
    "pillow~=9.5.0",
    "python_magic~=0.4.27",
    "python-magic-bin; sys_platform == 'win32'",
]
[project.urls]
Source = "https://github.com/Ben-Brady/mediaify"


[project.optional-dependencies]
test = [
    "mypy ==0.982",
    "pytest >=7.1.3,<8.0.0",
    # "coverage[toml] >= 6.5.0,< 8.0",
    # "ruff ==0.0.138",
    # "black == 23.1.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

# [tool.mypy]
# strict = true


# [tool.coverage.run]
# parallel = true
# source = [
#     "mediaify"
# ]

